--- a/ecommerce.yml
+++ b/ecommerce.yml
@@ -1,6 +1,6 @@
 token:
-  expiration_time: 8640000 #하루짜리 토큰 60x60x24x1000
-  secret: user_token
+  expiration_time: 8640100000 #하루짜리 토큰 60x60x24x1000
+  secret: my_token
 
 gateway:
   ip: 192.168.0.8
