--- a/ecommerce-dev.yml
+++ b/ecommerce-dev.yml
@@ -1,6 +1,6 @@
 token:
   expiration_time: 8640100000 #하루짜리 토큰 60x60x24x1000
-  secret: my_token_dev
+  secret: my_token_dev_123
 
 gateway:
   ip: 192.168.0.8
